--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,7 +7,7 @@ description: |
     subordinate to any VM or baremetal machine. It has two modes: iSCSI or Fibre Channel.
     In the iSCSI mode, it will connect the host to an iSCSI target and configure multipath 
     accordingly. For Fibre Channel, this charm detects the WWID of the FC LUNs and 
-    configures multipath accordingly for the device to be ready to be used.
+    configures multipathd so that the device is ready to be used.
 tags:
     - iscsi
     - fibrechannel
