tests: make unit and func tests pass again
This changes are mostly working on the test codes to make sure they are
passing for the upcoming jammy support. In addition to that, it removes some
old workarounds that are not needed anymore.

There's still one open issue about the functional tests. See below.

Since this is a big change, here is a summary of changes.

Makefile:
  - remove workaround for the closed issue[0] where symlinks breaking
    charm push
  - introduce standard rename.sh

tests/unit:
  - mock a bunch of stuff that were trying to modify system files/dirs

tests/functional:
  - remove workaround for the closed issue[1] where zaza was not
    respecting local_overlay_enabled key
  - fix the issue where zaza waits for ubuntu charms indefinitely due to
    empty message[2]
  - add missing required config key in iscsi test
  - charmstore -> charmhub

src:
  - get rid of commented code in production
  - add missing quotes to a config.yaml default key

---

Currently open issues:
tests/functional:
  - focal-fc bundle is not running, probably needs special hardware
    judging by the constraint given in the bundle file. However it is not
    listed in gate or smoke bundles, so it is not blocking the release.

[0] https://github.com/canonical/charmcraft/issues/109
[1] https://github.com/openstack-charmers/zaza/issues/379
[2] https://github.com/openstack-charmers/zaza/issues/436

Signed-off-by: Mert Kırpıcı <mert.kirpici@canonical.com>

--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ options:
               "hostname2": "iqn.yyyy-mm.naming-authority:uniquename2}'
     multipath-defaults:
         type: string
-        default: "{user_friendly_names: yes}"
+        default: '{"user_friendly_names": "yes"}'
         description: |
             In multipath config, sets the defaults configuration. String should be of JSON dictionary format.
             Double quotes are essential to the correct format of this JSON string.
