--- a/tests/functional/tests/bundles/focal.yaml
+++ b/tests/functional/tests/bundles/focal.yaml
@@ -1,12 +1,11 @@
+local_overlay_enabled: True
 series: focal
 applications:
   ubuntu-target:
-    charm: cs:ubuntu
+    charm: ch:ubuntu
     num_units: 1
-  storage-connector:
-    charm: #path is defined in overlay because of bug https://github.com/openstack-charmers/zaza/issues/379
   ubuntu:
-    charm: cs:ubuntu
+    charm: ch:ubuntu
     num_units: 1
 relations:
   - - 'ubuntu:juju-info'
