--- a/tests/functional/tests/tests.yaml
+++ b/tests/functional/tests/tests.yaml
@@ -1,11 +1,12 @@
 charm_name: storage-connector
 
 smoke_bundles:
-    - focal
+    - jammy
 
 gate_bundles:
     - bionic
     - focal
+    - jammy
 
 configure:
  - storage-connector-func-tests.setup.basic_target_setup
