libs: add required ops libraries
Fetch the following libraries:
- operator-libs-linux/snap v1.5
- prometheus-k8s/prometheus-scrape v0.21
- observability-libs/juju-topology v0.2

Works-on: 1966618
Signed-off-by: Mert Kırpıcı <mert.kirpici@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
     coverage combine
     coverage html -d cover
     coverage xml -o cover/coverage.xml
-    coverage report
+    coverage report -m --omit lib/charms/*,templates/*
 deps = -r{toxinidir}/tests/unit/requirements.txt
        -r{toxinidir}/requirements.txt
 setenv = 
@@ -69,5 +69,6 @@ exclude =
     .history,
     build,
     .build,
+    lib/charms,
 max-line-length = 88
 max-complexity = 10
