--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,6 +14,14 @@ tags:
     - fiberchannel
 subordinate: true
 requires:
-   host:
+    host:
        interface: juju-info
        scope: container
+provides:
+    metrics-endpoint:
+        interface: prometheus_scrape
+resources:
+    prometheus-iscsi-exporter:
+        type: file
+        filename: prometheus-iscsi-exporter.snap
+        description: exporter
