charm: implement nrpe interface
Works-on: 1966618
Signed-off-by: Mert Kırpıcı <mert.kirpici@canonical.com>

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,6 +20,9 @@ requires:
 provides:
     metrics-endpoint:
         interface: prometheus_scrape
+    nrpe-external-master:
+        interface: nrpe-external-master
+        scope: container
 resources:
     prometheus-iscsi-exporter:
         type: file
