--- a/config.yaml
+++ b/config.yaml
@@ -120,3 +120,18 @@ options:
             reception on devices supporting it. To prevent doing automatic scans
             that would add unwanted luns to the system, set to 'manual'. Default
             is 'auto'.
+    nagios_context:
+        default: "juju"
+        type: string
+        description: |
+            A string that will be prepended to instance name to set the host name
+            in nagios. So for instance the hostname would be something like:
+                juju-myservice-0
+            If you're running multiple environments with the same services in them
+            this allows you to differentiate between them.
+    nagios_multipath_paths_per_volume:
+        default: 4
+        type: int
+        description: |
+            Number of expected paths per volume. Any number other than this will
+            raise a CRITICAL nagios alert.
