Add defer methods for better handling service restarts
- Make use of charmhelpers policy_rcd script to block automatic stop, restarts, try-restarts action for all charm managed services, including iscsid open-iscsi, and multipathd.
- Handles deferred restarts triggered by both charm and non-charm events
- Display the queue of deferred service restarts in charm status message
and periodic updates
- Add `enable-auto-restarts` config option to give user option to allow automatic restarts action if needed (the default value is False)
- Add `restart-services` action to restart charm managed service. The
operator can choose to restart either all deferred services or a specific
set of services.
- Add `show-deferred-restarts` action to show all deferred restart events
with the timestamp and reason
- Add `iscsi-discovery-and-login` action that allow operator to manually
run iscsiadm discovery and login when needed
- Remove `restart-iscsi-services` action in favor of the new
`restart-services` action
- Better handling different types of iscsi discovery and login failures.
If failed because session already present, ignore the error; otherwise
change charm status to blocked.
- Add unittests and functional tests for the new and modified methods
- Rework functional tests logic to make each test case independent of each other.

--- a/actions.yaml
+++ b/actions.yaml
@@ -1,4 +1,33 @@
-restart-iscsi-services:
-  description: "Restart iscsid and open-iscsi services"
+restart-services:
+  description: |
+      Restart services managed by the charm.
+  params:
+    deferred-only:
+      type: boolean
+      default: false
+      description: |
+        Restart all deferred services. To check which services has been deferred,
+        run the `show-deferred-events` action.
+        NOTE: deferred-only and services params are mutually exclusive. Providing
+        both options will cause the action to fail.
+    services:
+      type: string
+      default: ""
+      description: |
+        List of services to restart. Supporting services includes iscsi,
+        open-iscsi, and multipathd.
+        This param accepts space-separated services in string format,
+        e.g. "iscsid open-iscsi"
+        NOTE: deferred-only and services params are mutually exclusive. Providing
+        both options will cause the action to fail.
+show-deferred-restarts:
+  descrpition: |
+    Show the outstanding service restarts
 reload-multipathd-service:
-  description: "Reload multipathd service"
+  description: |
+    Reload multipathd service
+iscsi-discovery-and-login:
+  description: |
+    Run discovery and login against iscsi target. This action is needed when
+    changes are made to iscsi configuration and the iscsi services
+    are restarted to apply these changes.
