--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ options:
         type: string
         default: data1
         description: |
-            LUN alias to give to the WWID for the mapping of the device. It is used in the path of the new mounted device, i.e /dev/mapper/<FC-LUN-ALIAS>. 
+            LUN alias to give to the WWID for the mapping of the device. It is used in the path of the new mounted device, i.e /dev/mapper/<FC-LUN-ALIAS>.
     iscsi-target:
         type: string
         default:
@@ -21,42 +21,48 @@ options:
         type: boolean
         default: True
         description: |
-            If set to True (default) and storage-type is iscsi, the charm will configure 
-            the iscsid and multipath configuration files, and then run an iscsiadm 
-            discovery and login against the target. If set to False, the charm will simply 
-            configure the unit but not run the discovery and login against the target. 
+            If set to True (default) and storage-type is iscsi, the charm will configure
+            the iscsid and multipath configuration files, and then run an iscsiadm
+            discovery and login against the target. If set to False, the charm will simply
+            configure the unit but not run the discovery and login against the target.
     initiator-dictionary:
         type: string
         default: '{}'
         description: |
-            Dictionary of hostnames (FQDN) and initiator names, surrounded by 
-            single quotes. The charm compares the machine hostname to 
-            the list, and provide the correct initiator associated to 
-            it. If not defined, the initiator name will be provided 
-            randomly. Format : 
+            Dictionary of hostnames (FQDN) and initiator names, surrounded by
+            single quotes. The charm compares the machine hostname to
+            the list, and provide the correct initiator associated to
+            it. If not defined, the initiator name will be provided
+            randomly. Format :
             '{"hostname1": "iqn.yyyy-mm.naming-authority:uniquename1",
               "hostname2": "iqn.yyyy-mm.naming-authority:uniquename2}'
+    enable-auto-restarts:
+        type: boolean
+        default: False
+        description: |
+            Allow the charm and packages to restart services automatically when
+            required.
     multipath-defaults:
         type: string
         default: '{"user_friendly_names": "yes"}'
         description: |
             In multipath config, sets the defaults configuration. String should be of JSON dictionary format.
             Double quotes are essential to the correct format of this JSON string.
-            Example: 
+            Example:
                 value : '{"user_friendly_names":"yes", "find_multipaths":"yes", "polling_interval":"10"}'
                 Which will produce this configuration:
-                defaults { 
-                    user_friendly_names yes 
-                    find_multipaths yes 
+                defaults {
+                    user_friendly_names yes
+                    find_multipaths yes
                     polling_interval 10
-                }                       
+                }
     multipath-devices:
         type: string
         default:
         description: |
             In multipath config, add a device specific configuration. String should be of JSON dictionary format.
             Double quotes are essential to the correct format of this JSON string.
-            Example: 
+            Example:
                 value : '{"vendor":"PURE","product": "FlashArray","fast_io_fail_tmo": "10", "path_grouping_policy":"group_by_prio"}'
                 Which will produce this configuration:
                 device {
@@ -67,9 +73,9 @@ options:
                 }
     multipath-blacklist:
         type: string
-        default: 
+        default:
         description: |
-            In multipath config, add a blacklist device section to exlude local disks from being handled by multipath-tools. It is possible
+            In multipath config, add a blacklist device section to exclude local disks from being handled by multipath-tools. It is possible
             to blacklist by vendor/product, by devnode or WWID. String should be of JSON dictionary format. Double quotes are essential to the correct format of this JSON string.
             Example:
                 value: '{"vendor": "QEMU", "product": "*"}'
