--- a/tests/functional/tests/tests.yaml
+++ b/tests/functional/tests/tests.yaml
@@ -11,6 +11,7 @@ gate_bundles:
 configure:
  - storage-connector-func-tests.setup.basic_target_setup
  - storage-connector-func-tests.setup.configure_iscsi_target
+ - storage-connector-func-tests.setup.configure_iscsi_connector
 
 tests:
  - storage-connector-func-tests.tests.StorageConnectorTest
