Remove service related BlockStatus setter and pin ops framework version

--- a/config.yaml
+++ b/config.yaml
@@ -22,10 +22,10 @@ options:
         default: True
         description: |
             If set to True (default) and storage-type is iscsi, the charm will run an
-            iscsiadm discovery and login against target after charm-managed iscsi services
-            restarts (triggered by either config changes or by the restart-services action).
-            If set to False, the charm will not automatically run the discovery and login
-            against the target.
+            iscsiadm discovery and login against the target after charm-managed iscsi
+            services restart (triggered by either config changes or by the restart-services
+            action). If set to False, the charm will not automatically run the discovery
+            and login against the target.
     initiator-dictionary:
         type: string
         default: '{}'
