--- a/tox.ini
+++ b/tox.ini
@@ -1,75 +1,84 @@
+# This is a template `tox.ini` file for ops charms
+# This file is managed by bootstack-charms-spec and should not be modified
+# within individual charm repos. https://launchpad.net/bootstack-charms-spec
+
 [tox]
-skipsdist = True
-envlist = unit, functional
-sitepackages = False
-skip_missing_interpreters = False
+skipsdist=True
+envlist = lint, unit, func
 
 [testenv]
 basepython = python3
 setenv =
-  PYTHONPATH = {toxinidir}/lib/:{toxinidir}
+  PYTHONPATH = {toxinidir}:{toxinidir}/lib/:{toxinidir}/src/
 passenv =
-    HOME
-    CHARM_BUILD_DIR
-    OS_*
-whitelist_externals = charmcraft
+  HOME
+  PATH
+  CHARM_*
+  PYTEST_KEEP_MODEL
+  PYTEST_CLOUD_NAME
+  PYTEST_CLOUD_REGION
+  PYTEST_MODEL
+  MODEL_SETTINGS
+  HTTP_PROXY
+  HTTPS_PROXY
+  NO_PROXY
+  SNAP_HTTP_PROXY
+  SNAP_HTTPS_PROXY
+  OS_*
+
+[testenv:dev-environment]
+envdir = {toxinidir}/.venv
+deps =
+  pre-commit
+  {[testenv:lint]deps}
+  {[testenv:unit]deps}
+  {[testenv:func]deps}
+
+[testenv:pre-commit]
+envdir = {[testenv:dev-environment]envdir}
+deps = {[testenv:dev-environment]deps}  # ensure that dev-environment is installed
+commands = pre-commit run --all-files
+
+[testenv:lint]
+commands =
+    pflake8
+    pylint --recursive=y .
+    mypy --install-types --non-interactive .
+    black --check --diff --color .
+    isort --check --diff --color .
+deps =
+    black
+    pylint
+    mypy
+    flake8
+    pyproject-flake8
+    flake8-docstrings
+    pep8-naming
+    flake8-colors
+    colorama
+    isort
+    {[testenv:unit]deps}
+    {[testenv:func]deps}
+
+[testenv:reformat]
+envdir = {toxworkdir}/lint
+commands =
+    black .
+    isort .
+deps = {[testenv:lint]deps}
 
 [testenv:unit]
-commands =
-    coverage erase
-    stestr run --slowest {posargs}
-    coverage combine
-    coverage html -d cover
-    coverage xml -o cover/coverage.xml
-    coverage report -m --omit lib/charms/*,templates/*
-deps = -r{toxinidir}/tests/unit/requirements.txt
-       -r{toxinidir}/requirements.txt
-setenv =
-     {[testenv]setenv}
-     PYTHON=coverage run
-
-[coverage:run]
-branch = True
-concurrency = multiprocessing
-parallel = True
-source =
-    .
-omit =
-    .tox/*
-    tests/*
+commands = pytest {toxinidir}/tests/unit \
+    {posargs:-v --cov --cov-report=term-missing --cov-report=html --cov-report=xml}
+deps =
+    -r {toxinidir}/requirements.txt
+    -r {toxinidir}/tests/unit/requirements.txt
+    pytest
+    pytest-cov
 
 [testenv:func]
 changedir = {toxinidir}/tests/functional
-commands = functest-run-suite {posargs}
-deps = -r{toxinidir}/tests/functional/requirements.txt
-
-[testenv:func-noop]
-basepython = python3
-commands =
-    functest-run-suite --help
-deps = -r{toxinidir}/tests/functional/requirements.txt
-
-[testenv:lint]
-commands = flake8
+commands = functest-run-suite {posargs:--keep-faulty-model}
 deps =
-    flake8
-    flake8-docstrings
-    flake8-import-order
-    pep8-naming
-    flake8-colors
-
-[flake8]
-ignore =
-    # line break after binary operator
-    W504
-exclude =
-    .git,
-    __pycache__,
-    .tox,
-    mod,
-    .history,
-    build,
-    .build,
-    lib/charms,
-max-line-length = 88
-max-complexity = 10
+  git+https://github.com/openstack-charmers/zaza.git#egg=zaza
+  -r {toxinidir}/tests/functional/requirements.txt
