chore: fix pylint warnings
Signed-off-by: Mert Kırpıcı <mert.kirpici@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ ignore-paths = [
   "report",
   "tests",
 ]
+disable = [
+  "C0209",  # consider-using-f-string
+]
 
 [tool.mypy]
 warn_unused_ignores = true
