--- a/actions.yaml
+++ b/actions.yaml
@@ -1,6 +1,6 @@
 restart-services:
   description: |
-      Restart services managed by the charm.
+    Restart services managed by the charm.
   params:
     deferred-only:
       type: boolean
@@ -21,7 +21,7 @@ restart-services:
         NOTE: deferred-only and services params are mutually exclusive. Providing
         both options will cause the action to fail.
 show-deferred-restarts:
-  descrpition: |
+  description: |
     Show the outstanding service restarts
 reload-multipathd-service:
   description: |
