Replace direct prometheus integration with grafana-agent.
Change Prometheus integration with the grafana-agent integration that indirectly exports the metrics to COS Prometheus.

The same exporter path and port are reused while initializing the `COSProviderAgent` class object.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,11 +15,11 @@ tags:
 subordinate: true
 requires:
     host:
-       interface: juju-info
-       scope: container
+        interface: juju-info
+        scope: container
 provides:
-    metrics-endpoint:
-        interface: prometheus_scrape
+    cos-agent:
+        interface: cos_agent
     nrpe-external-master:
         interface: nrpe-external-master
         scope: container
