--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,11 +13,26 @@ on:
       - '**.rst'
 
 jobs:
-  pr:
-    uses: canonical/bootstack-actions/.github/workflows/pull-request.yaml@main
-    secrets: inherit
+  lint-unit:
+    uses: canonical/bootstack-actions/.github/workflows/lint-unit.yaml@v2
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.8", "3.10"]
     with:
-      python-version-unit: "['3.8', '3.10']"
-      python-version-func: "3.10"
+      python-version: ${{ matrix.python-version }}
       tox-version: "<4"
-      commands: "['make functional']"
+
+  func:
+    uses: canonical/bootstack-actions/.github/workflows/func.yaml@v2
+    needs: lint-unit
+    strategy:
+      fail-fast: false
+    with:
+      command: "make functional"
+      juju-channel: "3.1/stable"
+      nested-containers: false
+      provider: "lxd"
+      python-version: "3.10"
+      timeout-minutes: 120
+      tox-version: "<4"
