--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -32,7 +32,7 @@ jobs:
       command: "make functional"
       juju-channel: "3.1/stable"
       nested-containers: false
-      provider: "lxd"
+      provider: "microstack"
       python-version: "3.10"
       timeout-minutes: 120
       tox-version: "<4"
