--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -6,6 +6,7 @@ name: PR workflow running lint checkers, unit and functional tests
 
 on:
   workflow_call:
+  workflow_dispatch:
   pull_request:
     types: [ opened, synchronize, reopened ]
     branches: [ master, main ]
