Bundles clean-up + prep for running on LXD
Clean up func test bundles and add constraints
virt-type=virtual-machine, so test can be run on LXD.

--- a/tests/functional/tests/bundles/focal-fc.yaml
+++ b/tests/functional/tests/bundles/focal-fc.yaml
@@ -2,6 +2,7 @@ local_overlay_enabled: True
 series: focal
 applications:
   storage-connector:
+    charm: ch:storage-connector
     options:
       storage-type: 'fc'
       fc-lun-alias: 'data1'
