--- a/tests/functional/tests/bundles/focal.yaml
+++ b/tests/functional/tests/bundles/focal.yaml
@@ -1,12 +1,1 @@
-local_overlay_enabled: True
-series: focal
-applications:
-  ubuntu-target:
-    charm: ch:ubuntu
-    num_units: 1
-  ubuntu:
-    charm: ch:ubuntu
-    num_units: 1
-relations:
-  - - 'ubuntu:juju-info'
-    - 'storage-connector:host'
+base.yaml
