--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,3 @@
-# This is a template `tox.ini` file for ops charms
-# This file is managed by bootstack-charms-spec and should not be modified
-# within individual charm repos. https://launchpad.net/bootstack-charms-spec
-
 [tox]
 skipsdist=True
 envlist = lint, unit, func
@@ -27,22 +23,9 @@ passenv =
   OS_*
   TEST_*
 
-[testenv:dev-environment]
-envdir = {toxinidir}/.venv
-deps =
-  pre-commit
-  {[testenv:lint]deps}
-  {[testenv:unit]deps}
-  {[testenv:func]deps}
-
-[testenv:pre-commit]
-envdir = {[testenv:dev-environment]envdir}
-deps = {[testenv:dev-environment]deps}  # ensure that dev-environment is installed
-commands = pre-commit run --all-files
-
 [testenv:lint]
 commands =
-    pflake8
+    flake8
     pylint --recursive=y .
     mypy --install-types --non-interactive .
     black --check --diff --color .
@@ -52,7 +35,7 @@ deps =
     pylint
     mypy
     flake8
-    pyproject-flake8
+    flake8-pyproject
     flake8-docstrings
     pep8-naming
     flake8-colors
@@ -62,7 +45,6 @@ deps =
     {[testenv:func]deps}
 
 [testenv:reformat]
-envdir = {toxworkdir}/lint
 commands =
     black .
     isort .
